Implementación medio pago + fix en swagger
